# ivol4D

./: CMakeLists.txt  gen_ivol4D.cxx  ijk.txx  ijkcube.txx  ijkgrid.txx  ijkgrid_macros.h  ijkgrid_nrrd.txx  ijkscalar_grid.txx  ivol4D.cxx  ivol4D_doxygen.config  ivol4D_types.h  run_ivol4D_ijkdual
cases/: config00033300L.nrrd  config00033300L.off  config00033300X.nrrd  config00111001.nrrd  config00111001L.nrrd  config00111001L.off  config01010110L.nrrd  config01010110L.off  config01010110X.nrrd  config01101000L.off  config10030313L.nrrd  config10030313L.off  config10030313X.nrrd  config2B11X.nrrd  config2C11L.nrrd  config2C11L.off  config2C11X.nrrd  config2C22L.nrrd  config2C22L.off  config2C22X.nrrd  config2C33L.nrrd  config2C33L.off  config2C33X.nrrd  config30000300L.nrrd  config30000300L.off  config30000300X.nrrd  config30000300X_11.nrrd  config30000300X_11L.nrrd  config30000300X_11L.off  config30000300X_new.nrrd  config30000300X_newL.nrrd  config30000300X_newL.off  config33331001L.nrrd  config33331001L.off  config33331001X.nrrd  config3A131L.nrrd  config3A131L.off  config3A131X.nrrd  config3A311L.nrrd  config3A311L.off  (+80 more)
